EDU-812 Change chapter selector

--- a/src/components/media-player/chapter-selector.less
+++ b/src/components/media-player/chapter-selector.less
@@ -21,18 +21,18 @@
   justify-content: center;
 
   &.ant-btn {
-    background-color: @edu-secondary-color-dark;
+    background-color: @edu-primary-color-light;
 
     &:hover,
     &:focus,
     &:active {
       color: @edu-white;
-      background-color: lighten(@edu-secondary-color-dark, 5%);
+      background-color: lighten(@edu-primary-color-light, 5%);
     }
   }
 
   & > button:disabled {
     color: @edu-white;
-    background-color: @edu-secondary-color-light;
+    background-color: @edu-background-color-base;
   }
 }
