EDU-812 Improve chapter selection styling

--- a/src/components/media-player/timeline.less
+++ b/src/components/media-player/timeline.less
@@ -85,7 +85,8 @@
   border-right: 1px dotted @edu-border-color-base;
 
   &.is-selected {
-    box-shadow: 0px 2px 2px @edu-border-color-base;
+    box-shadow: 0px 2px 10px @edu-border-color-base;
+    background-color: darken(@edu-background-color-light, 3%);
   }
 
   &:last-of-type {
