--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -46,24 +46,27 @@
   border-radius: @edu-border-radius-base;
 }
 
-.EarTrainingDisplay-questionImage {
-  .m-horizontally-centered;
-  display: block;
-  max-width: 100%;
-
-  &.EarTrainingDisplay-questionImage--toggledOff {
-    display: none;
-
-    ~ .EarTrainingDisplay-answerImage {
-      display: block;
-    }
-  }
+.EarTrainingDisplay-images {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
 }
 
-.EarTrainingDisplay-answerImage {
-  .m-horizontally-centered;
-  display: none;
+.EarTrainingDisplay-image {
+  grid-row: 1;
+  grid-column: 1;
   max-width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 300ms ease, visibility 300ms step-end;
+
+  &.EarTrainingDisplay-image--visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 300ms ease, visibility 300ms step-start;
+  }
 }
 
 .EarTrainingDisplay-soundPlayer {
