--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -7,6 +7,5 @@
 .MediaAnalysisEditor {}
 
 .MediaAnalysisEditor-trackMixerPreview {
-  max-width: 400px;
-  margin: 0 auto 20px auto;
+  margin-bottom: 20px;
 }
