--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -7,6 +7,5 @@
 .MultitrackMediaEditor {}
 
 .MultitrackMediaEditor-trackMixerPreview {
-  max-width: 400px;
-  margin: 0 auto 20px auto;
+  margin-bottom: 20px;
 }
