EDU-815 Show chapter segments in media-analysis

--- a/src/components/media-player/timeline.less
+++ b/src/components/media-player/timeline.less
@@ -55,6 +55,7 @@
 .Timeline-segment {
   .m-overflow-ellipsis;
   text-align: center;
+  padding: 0 4px;
   border-right: 1px dotted @timeline-segments-bar-color;
 
   &.is-selected {
