--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -142,6 +142,7 @@
 @import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/media-analysis/media-analysis.less';
 @import '../plugins/media-slideshow/media-slideshow.less';
+@import '../plugins/music-xml-viewer/music-xml-viewer.less';
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/multitrack-media/multitrack-media.less';
 @import '../plugins/interactive-media/interactive-media.less';
