EDU-830 Add track mixer solo option

--- a/src/components/media-player/media-player-track-mixer.less
+++ b/src/components/media-player/media-player-track-mixer.less
@@ -19,3 +19,9 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.MediaPlayerTrackMixer-trackSolo {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
