EDU-816 Improve class names and translations

--- a/src/plugins/music-xml-viewer/music-xml-viewer.less
+++ b/src/plugins/music-xml-viewer/music-xml-viewer.less
@@ -1,10 +1,10 @@
-.MusicXmlViewer {}
+.MusicXmlViewerDisplay {}
 
-.MusicXmlViewer-viewer {
+.MusicXmlViewerDisplay-viewer {
   margin: 0 auto;
 }
 
-.MusicXmlViewer-caption {
+.MusicXmlViewerDisplay-caption {
   margin: 0 auto;
   text-align: center;
 }
