--- a/src/plugins/pdf-viewer/pdf-viewer.less
+++ b/src/plugins/pdf-viewer/pdf-viewer.less
@@ -1,10 +1,10 @@
-.PdfViewer {}
+.PdfViewerDisplay {}
 
-.PdfViewer-viewer {
+.PdfViewerDisplay-viewer {
   margin: 0 auto;
 }
 
-.PdfViewer-caption {
+.PdfViewerDisplay-caption {
   margin: 0 auto;
   text-align: center;
 }
