EDU-829 Update media-analysis plugin to support volume presets

--- a/src/components/media-player/track-mixer.less
+++ b/src/components/media-player/track-mixer.less
@@ -5,7 +5,13 @@
 @track-mixer-column-padding: 10px 0;
 @track-mixer-bar-overflow-width: 10px;
 
-.TrackMixer {
+.TrackMixer {}
+
+.TrackMixer-volumePresetSelector {
+  width: 200px;
+}
+
+.TrackMixer-tracks {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 15px;
