--- a/src/components/media-player/media-player-track-mixer.less
+++ b/src/components/media-player/media-player-track-mixer.less
@@ -1,4 +1,6 @@
-.MediaPlayerTrackMixer {
+.MediaPlayerTrackMixer {}
+
+.MediaPlayerTrackMixer-tracks {
   display: flex;
   flex-wrap: wrap;
   .m-fake-flex-gap(10px);
@@ -26,4 +28,14 @@
   justify-content: center;
 }
 
-.MediaPlayerTrackMixer-volumePresetSelector {}
+.MediaPlayerTrackMixer-volumePreset {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+.MediaPlayerTrackMixer-volumePresetSelector {
+  text-decoration: underline;
+  max-width: 200px;
+}
