EDU-829 Support volume presets management

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -108,6 +108,7 @@
 @import '../components/resource-picker/storage-location.less';
 @import '../components/media-player/media-range-selector.less';
 @import '../components/resource-picker/resource-selector.less';
+@import '../components/media-player/volume-presets-modal.less';
 @import '../components/media-player/media-player-controls.less';
 @import '../components/resource-picker/file-editor-screen.less';
 @import '../components/localization/country-flag-and-name.less';
