--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -77,3 +77,7 @@
 .MediaAnalysisEditor-trackMixerPreview {
   margin-bottom: 20px;
 }
+
+.MediaAnalysisEditor-segments {
+  border-radius: @edu-border-radius-base;
+}
