EDU-840 Show info icon

--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -78,6 +78,14 @@
   margin-bottom: 20px;
 }
 
-.MediaAnalysisEditor-segments {
+.MediaAnalysisEditor-segmentsDropzone {
   border-radius: @edu-border-radius-base;
+  position: relative;
+}
+
+.MediaAnalysisEditor-segmentsDropzoneInfo {
+  border-radius: @edu-border-radius-base;
+  position: absolute;
+  bottom: @edu-control-spacing-wide;
+  right: @edu-control-spacing-wide;
 }
