EDU-832 Trigger native import from imports page based on typed in key word

--- a/src/components/pages/create-import.less
+++ b/src/components/pages/create-import.less
@@ -4,6 +4,13 @@
   min-width: 280px;
 }
 
+.CreateImportPage-input {
+  width: 300px;
+  display: block;
+  margin-left: auto;
+  margin-top: (@edu-content-padding * 2);
+}
+
 .CreateImportPage-importButton {
-  margin: (@edu-content-padding * 2) 0;
+  margin: 5px 0 (@edu-content-padding * 2) 0;
 }
