EDU-864 Make text content in media slideshows scroll if too big

--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -31,10 +31,10 @@
   width: 100%;
   padding: @edu-content-padding;
   background-color: @edu-background-color-light;
-  display: flex;
+  display: grid;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  justify-items: stretch;
+  overflow: auto;
 }
 
 .MediaSlideshow-chapterImageOverlayWrapper {
