--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -45,7 +45,7 @@
 .MediaSlideshow-chapterImageOverlay {
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-repeat: no-repeat;
   background-position: center center;
   display: flex;
   align-items: center;
