EDU-884 Add url-input component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -22,6 +22,7 @@
 @import '../components/alert.less';
 @import '../components/markdown.less';
 @import '../components/news-tab.less';
+@import '../components/url-input.less';
 @import '../components/room-card.less';
 @import '../components/rooms-tab.less';
 @import '../components/pages/doc.less';
