EDU-845 Do not render document title automatically

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -2,6 +2,26 @@
 
 .RoomPage {}
 
+.RoomPage-title {
+  display: flex;
+  align-items: baseline;
+  margin: 0 0 0.5em 0;
+  padding: 0 0 0.25em 0;
+  border-bottom: 1px solid @edu-border-color-dark;
+}
+
+.RoomPage-titleText {
+  flex: 1 0 0%;
+  font-weight: bold;
+  margin: 0 2.5em 0 0;
+  color: @edu-text-color;
+  font-size: @edu-title-size;
+}
+
+.RoomPage-titleExtra {
+  flex: none;
+}
+
 .RoomPage-subtitle {
   display: flex;
   font-size: 12px;
