Refactor code based on github comments

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -130,6 +130,7 @@
 @import '../plugins/image/image.less';
 @import '../plugins/anavis/anavis.less';
 @import '../plugins/iframe/iframe.less';
+@import '../plugins/midi-piano/midi-piano.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
 @import '../plugins/diagram-net/diagram-net.less';
 @import '../plugins/image-tiles/image-tiles.less';
