EDU-849 Use CSS class instead of inline style

--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -24,6 +24,11 @@
   padding: 0 @media-analysis-text-padding;
   border-left: 1px dotted @edu-white;
   border-right: 1px dotted @edu-border-color-dark;
+  cursor: default;
+
+  &.MediaAnalysisDisplay-chapterTitle--interactive {
+    cursor: pointer;
+  }
 
   &:first-of-type {
     border-left: none;
