--- a/src/components/media-player/timeline.less
+++ b/src/components/media-player/timeline.less
@@ -1,10 +1,9 @@
 @timeline-bar-height: 25px;
-@timeline-marker-bottom: 6px;
-@timeline-markers-bar-height: 36px;
 @timeline-segments-bar-color: @edu-white;
 
 .Timeline {
   display: flex;
+  margin-top: 20px;
   user-select: none;
   flex-direction: column;
 }
@@ -12,15 +11,17 @@
 .Timeline-markersBar {
   display: flex;
   position: relative;
-  height: @timeline-markers-bar-height;
+  height: @timeline-bar-height;
+
+  &:hover {
+    background-color: @edu-background-color-light;
+  }
 }
 
 .Timeline-marker {
   position: absolute;
-  bottom: @timeline-marker-bottom;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  bottom: 2px;
+  margin-left: -6px;
 
   &.Timeline-marker--draggable {
     color: @edu-primary-color-light;
@@ -69,6 +70,11 @@
 
   &:last-of-type {
     border-right: none;
+  }
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0px -2px 2px @edu-border-color-base;
   }
 }
 
