EDU-857 Create actual TOC plugin

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -147,3 +147,4 @@
 @import '../plugins/interval-trainer/interval-trainer.less';
 @import '../plugins/multitrack-media/multitrack-media.less';
 @import '../plugins/interactive-media/interactive-media.less';
+@import '../plugins/table-of-contents/table-of-contents.less';
