EDU-896 Confirm segment/chapter deletion and fix some out-of-bounds UI issues

--- a/src/components/delete-button.less
+++ b/src/components/delete-button.less
@@ -2,9 +2,12 @@
   .m-icon-button;
   color: @edu-error-color;
 
-  &:hover,
   &:active,
   &:visited {
     color: @edu-error-color;
+  }
+
+  &:hover {
+    color: lighten(@edu-error-color, 15%);
   }
 }
