EDU-901 Rename caption to text and make it a block markdown element

--- a/src/plugins/table-of-contents/table-of-contents.less
+++ b/src/plugins/table-of-contents/table-of-contents.less
@@ -1,5 +1,9 @@
 .TableOfContentsDisplay {}
 
+.TableOfContentsDisplay-text {
+  margin-bottom: @edu-content-padding;
+}
+
 .TableOfContentsDisplay-nodeList {
   padding: 0;
   list-style: none;
