EDU-861 Set up edit and display plugin components

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -141,3 +141,4 @@
 @import '../plugins/multitrack-media/multitrack-media.less';
 @import '../plugins/interactive-media/interactive-media.less';
 @import '../plugins/table-of-contents/table-of-contents.less';
+@import '../plugins/markdown-with-image/markdown-with-image.less';
