EDU-891 Use component modifier CSS classes instead of inline styles

--- a/src/plugins/markdown-with-image/markdown-with-image.less
+++ b/src/plugins/markdown-with-image/markdown-with-image.less
@@ -9,6 +9,16 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  &.MarkdownWithImageDisplay-imageWrapper--left {
+    float: left;
+    padding-left: 0;
+  }
+
+  &.MarkdownWithImageDisplay-imageWrapper--right {
+    float: right;
+    padding-right: 0;
+  }
 }
 
 .MarkdownWithImageDisplay-image {
