--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -128,6 +128,7 @@
 @import '../plugins/video/video.less';
 @import '../plugins/image/image.less';
 @import '../plugins/iframe/iframe.less';
+@import '../plugins/memory/memory.less';
 @import '../plugins/catalog/catalog.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
 @import '../plugins/diagram-net/diagram-net.less';
