--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -25,6 +25,7 @@
 @import '../components/room-card.less';
 @import '../components/rooms-tab.less';
 @import '../components/pages/doc.less';
+@import '../components/flip-card.less';
 @import '../components/pages/user.less';
 @import '../components/pages/docs.less';
 @import '../components/error-page.less';
