--- a/src/plugins/memory/memory.less
+++ b/src/plugins/memory/memory.less
@@ -3,6 +3,9 @@
   gap: 10px;
   aspect-ratio: 1;
   margin: 0 auto;
+  padding: 10px;
+  border-radius: @edu-border-radius-sm;
+  background-color: @edu-background-color-light;
 
   &.MemoryDisplay--3x3 {
     grid-template-columns: 1fr 1fr 1fr;
