EDU-904 Add wikimedia resource picker screens

--- a/src/components/resource-picker/utilities.less
+++ b/src/components/resource-picker/utilities.less
@@ -35,6 +35,11 @@
   justify-content: space-between;
 }
 
+.u-resource-picker-screen-footer-right-aligned {
+  .u-resource-picker-screen-footer;
+  justify-content: flex-end;
+}
+
 .u-resource-picker-screen-footer-buttons {
   .m-control-group-wide;
   margin-top: @edu-control-spacing-base;
