--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -111,6 +111,8 @@
 @import '../components/media-player/multitrack-media-player.less';
 @import '../components/media-player/media-player-track-mixer.less';
 @import '../components/media-player/media-player-progress-bar.less';
+@import '../components/resource-picker/wikimedia-commons-search.less';
+@import '../components/resource-picker/wikimedia-commons-files-grid-viewer.less';
 
 
 // Pure CSS components
