EDU-904 Implement search continuation

--- a/src/components/resource-picker/wikimedia-commons-search.less
+++ b/src/components/resource-picker/wikimedia-commons-search.less
@@ -28,10 +28,16 @@
 }
 
 .WikimediaCommonsSearch-buttonsLineItem {
+  white-space: nowrap;
   margin-top: @edu-control-spacing-base;
 }
 
-.WikimediaCommonsSearch-locationInfo {
+.WikimediaCommonsSearch-searchFileTypeLabel {
+  display: inline-block;
+  margin-right: @edu-control-spacing-wide;
+}
+
+.WikimediaCommonsSearch-searchInfo {
   min-height: 40px;
   margin-bottom: 20px;
 }
