--- a/src/components/resource-picker/wikimedia-commons-search.less
+++ b/src/components/resource-picker/wikimedia-commons-search.less
@@ -5,14 +5,28 @@
   grid-template-columns: 100%;
 }
 
+.WikimediaCommonsSearch-initialFilePreview {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.WikimediaCommonsSearch-initialFilePreviewHeader {
+  margin-bottom: 20px;
+}
+
+.WikimediaCommonsSearch-initialFilePreviewFooter {
+  font-size: 90%;
+  margin-top: 20px;
+}
+
 .WikimediaCommonsSearch-filesViewer {
   margin: 20px 0;
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
-
-  & .ant-table-placeholder .ant-table-cell {
-    border: none;
-  }
 }
 
 .WikimediaCommonsSearch-filesViewerContent {
