EDU-908 Improve CSS prop setting

--- a/src/plugins/memory/memory.less
+++ b/src/plugins/memory/memory.less
@@ -8,13 +8,13 @@
   background-color: @edu-background-color-light;
 
   &.MemoryDisplay--3x3 {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 
   &.MemoryDisplay--4x4 {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
   }
 }
 
