EDU-904 Keep scroll position after back navigation from preview

--- a/src/components/resource-picker/wikimedia-commons-search.less
+++ b/src/components/resource-picker/wikimedia-commons-search.less
@@ -1,8 +1,12 @@
 .WikimediaCommonsSearch {
   height: 100%;
   display: grid;
-  grid-template-rows: auto 1fr auto auto;
   grid-template-columns: 100%;
+  grid-template-rows: auto 1fr auto auto;
+
+  &.is-hidden {
+    visibility: hidden;
+  }
 }
 
 .WikimediaCommonsSearch-initialFilePreview {
