--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -17,7 +17,6 @@
 .FlipCard-face {
   position: absolute;
   user-select: none;
-  cursor: pointer;
   width: 100%;
   height: 100%;
   padding: 8px;
@@ -27,19 +26,26 @@
   backface-visibility: hidden;
   border: 1px solid @edu-border-color-light;
   border-radius: @edu-border-radius-sm;
-
-  &:hover {
-    border-color: @edu-border-color-dark;
-  }
+  background-color: @edu-white;
 
   &.FlipCard-face--front {
+    cursor: pointer;
     background-color: @edu-white;
     transform: rotateY(180deg);
   }
 
   &.FlipCard-face--back {
+    cursor: pointer;
     background-color: lighten(@edu-primary-color-light, 15%);
   }
+
+  &.FlipCard-face--front,
+  &.FlipCard-face--back {
+    &:hover {
+      border-color: @edu-border-color-dark;
+    }
+  }
+
 
   &.is-disabled {
     cursor: default;
