--- a/src/plugins/memory/memory.less
+++ b/src/plugins/memory/memory.less
@@ -28,3 +28,25 @@
 .MemoryEditor-tileButton {
   margin-right: 10px;
 }
+
+.MemoryEditor-preview {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.MemoryEditor-previewTile {
+  aspect-ratio: 1;
+}
+
+.MemoryEditor-previewTileFace {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.MemoryTile {}
+
+.MemoryTile-image {
+  max-width: 100%;
+}
