EDU-916 Use reactPlayer in memory tile

--- a/src/plugins/memory/memory.less
+++ b/src/plugins/memory/memory.less
@@ -58,3 +58,16 @@
 .MemoryTile-image {
   max-width: 100%;
 }
+
+.MemoryTile-audio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: @edu-text-color-secondary;
+  font-size: 80px;
+  aspect-ratio: 16/9;
+}
+
+.MemoryTile-markdown {
+  padding: 8px;
+}
