EDU-912 Ensure youtube is stopped when tile is turned face down and prevent youtube player interaction

--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -10,11 +10,7 @@
 }
 
 .RoomCard-disablingOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  .m-mask;
   opacity: 50%;
   border-radius: @edu-border-radius-base;
   background-color: @edu-white;
