--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -139,11 +139,7 @@
 }
 
 .SectionDisplay-overlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  .m-mask;
   display: flex;
   align-items: center;
   justify-content: center;
