--- a/src/components/resource-picker/files-viewer.less
+++ b/src/components/resource-picker/files-viewer.less
@@ -6,11 +6,7 @@
 }
 
 .FilesViewer-loadingOverlay {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  .m-mask;
   display: grid;
   align-content: center;
   justify-content: center;
