EDU-912 Use mixin in one more place

--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -61,11 +61,7 @@
 }
 
 .FlipCard-disabledOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  .m-mask;
   background-color: darken(@edu-background-color-base, 5%);
   opacity: 0.85;
 }
