EDU-938 Keep cards flipped in pairs

--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -45,6 +45,14 @@
     }
   }
 
+  &.is-locked {
+    cursor: default;
+
+    &:hover {
+      border-color: @edu-border-color-light;
+    }
+  }
+
   &.is-disabled {
     cursor: default;
     overflow: hidden;
