--- a/src/components/media-player/media-range-selector.less
+++ b/src/components/media-player/media-range-selector.less
@@ -13,4 +13,17 @@
 
 .MediaRangeSelector-rangeDisplay {
   text-align: center;
+  padding-bottom: 25px;
+}
+
+.MediaRangeSelector-rangeSelector {
+  display: flex;
+  align-items: center;
+}
+
+.MediaRangeSelector-rangeSelectorButtons {
+  display: grid;
+  gap: 10px;
+  margin-left: 15px;
+  grid-auto-flow: column;
 }
