EDU-923 Add button to reset range to maximum values

--- a/src/components/media-player/media-range-selector.less
+++ b/src/components/media-player/media-range-selector.less
@@ -27,3 +27,9 @@
   margin-left: 15px;
   grid-auto-flow: column;
 }
+
+.MediaRangeSelector-footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
