--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -131,7 +131,6 @@
 @import '../plugins/video/video.less';
 @import '../plugins/image/image.less';
 @import '../plugins/iframe/iframe.less';
-@import '../plugins/memory/memory.less';
 @import '../plugins/catalog/catalog.less';
 @import '../plugins/pdf-viewer/pdf-viewer.less';
 @import '../plugins/diagram-net/diagram-net.less';
@@ -140,6 +139,7 @@
 @import '../plugins/abc-notation/abc-notation.less';
 @import '../plugins/audio-waveform/audio-waveform.less';
 @import '../plugins/media-analysis/media-analysis.less';
+@import '../plugins/matching-cards/matching-cards.less';
 @import '../plugins/media-slideshow/media-slideshow.less';
 @import '../plugins/music-xml-viewer/music-xml-viewer.less';
 @import '../plugins/multitrack-media/multitrack-media.less';
