EDU-924 Add text offset to markdown-with-image plugin

--- a/src/plugins/markdown-with-image/markdown-with-image.less
+++ b/src/plugins/markdown-with-image/markdown-with-image.less
@@ -3,7 +3,7 @@
 }
 
 .MarkdownWithImageDisplay-imageWrapper {
-  padding: 10px 15px;
+  padding: 0.5em 2em 1em 2em;
 
   @media @edu-media-phone {
     padding-left: 0;
