EDU-943 Fix list styling in markdown

--- a/src/components/markdown.less
+++ b/src/components/markdown.less
@@ -65,6 +65,12 @@
     font-weight: normal;
   }
 
+  ol, dl, ul {
+    overflow: hidden;
+    padding-left: 2.5em;
+    list-style-position: outside;
+  }
+
   hr {
     display: block;
     height: 1px;
