EDU-947 Consolidate info labels and icons

--- a/src/components/resource-picker/files-upload-screen.less
+++ b/src/components/resource-picker/files-upload-screen.less
@@ -36,12 +36,8 @@
 }
 
 .FilesUploadScreen-messageDetails {
-  padding-top: 5px;
+  padding: 5px 0 0 5px;
   font-size: 12px;
-}
-
-.FilesUploadScreen-messageDetailsIcon {
-  margin: 0 10px;
 }
 
 .FilesUploadScreen-fileStatusContainer {
