--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -17,6 +17,7 @@
 @import './antd-variable-overrides.less';
 
 // React components
+@import '../components/info.less';
 @import '../components/table.less';
 @import '../components/alert.less';
 @import '../components/markdown.less';
