EDU-946 Remove pointer events from invisible footer parts

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -9,6 +9,7 @@
   width: @control-panel-height;
   background-color: @edu-primary-color-light;
   transition: width 500ms ease;
+  pointer-events: all;
 
   &.is-open {
     width: 100vw;
