--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: flex-end;
   z-index: @edu-z-index-overlay-layer;
+  pointer-events: none;
 
   &.is-panel-open {
     margin: 0;
