EDU-926 Mark documents as drafts in rooms

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -57,6 +57,20 @@
   padding-right: 10px;
 }
 
+.RoomPage-documentRowMenu {
+  display: flex;
+  align-items: center;
+}
+
+.RoomPage-documentRowDraftLabel {
+  background-color: @edu-background-color-base;
+  border-radius: @edu-border-radius-base;
+  margin-right: 10px;
+  padding: 2px 8px;
+  font-size: 13px;
+  font-style: italic;
+}
+
 .RoomPage-membersRow {
   display: flex;
   justify-content: space-between;
