EDU-934 Adjust to new react-pdf version to fix pdf-viewer plugin

--- a/src/components/pdf-document.less
+++ b/src/components/pdf-document.less
@@ -1,3 +1,4 @@
+@import (less) 'react-pdf/dist/esm/Page/TextLayer.css';
 @import (less) 'react-pdf/dist/esm/Page/AnnotationLayer.css';
 
 .PdfDocument {}
