--- a/src/plugins/matching-cards/matching-cards.less
+++ b/src/plugins/matching-cards/matching-cards.less
@@ -1,7 +1,9 @@
 @matching-cards-board-padding: 10px;
 @matching-cards-board-tiles-gap: 10px;
 
-.MatchingCardsDisplay {
+.MatchingCardsDisplay {}
+
+.MatchingCardsDisplay-grid {
   display: grid;
   gap: @matching-cards-board-tiles-gap;
   aspect-ratio: 1;
@@ -10,15 +12,20 @@
   border-radius: @edu-border-radius-sm;
   background-color: @edu-background-color-light;
 
-  &.MatchingCardsDisplay--3x3 {
+  &.MatchingCardsDisplay-grid--3x3 {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 
-  &.MatchingCardsDisplay--4x4 {
+  &.MatchingCardsDisplay-grid--4x4 {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
   }
+}
+
+.MatchingCardsDisplay-resetButton {
+  display: block;
+  margin: 15px auto 0 auto;
 }
 
 .MatchingCardsEditor {}
